# ArkProtocol-Astra

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  PR_REVIEW.md  README.md  RELEASE.md  SECURITY-SECRETS.md  audit-summary.md  format-fix.patch  geiger-ark-wallet-cli.txt  nova-core-cold-sign.patch  tmp_pbkdf2_a.json  tmp_poll_run.ps1  tmp_scrypt_a.json  tmp_scrypt_b.json
.gh-artifacts-17722485147/cargo-audit-report/: audit.json
.gh-artifacts-17724972909/geiger-full-artifacts/: extract_cli.txt
.gh-artifacts-17725490723/geiger-full-artifacts/: geiger-full.json
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: security_audit_geiger.md
.github/editor-setup/: README.md  rust-analyzer-settings.json
.github/scripts/: README.md  auto_fix_ci.ps1  move_sensitive.ps1
.github/workflows/: ci.yml  release-artifacts.yml  (+2 more)
SECURITY/: triage_top_unsafe.md
ci_artifacts/: base_cli.rs  build_ark_wallet_cli.txt  build_ark_wallet_cli_local.txt  cargo_fmt_check_after_apply.txt  cargo_fmt_check_after_fix.txt  cargo_fmt_check_after_patch.txt  cargo_fmt_check_before_apply.txt  cargo_fmt_check_run3.txt  check_cli_utf8.ps1  checkout_after_move.out  clippy_all.txt  clippy_ark_wallet_cli.txt  commits_origin_to_local.txt  final_head_after_move.txt  gh_auth_status.txt  gh_run_list.txt  gh_run_list_full.json  gh_version.txt  local_head_sha.txt  main_recent_runs_raw.json  main_run_17801698782_snapshot_.json  main_run_17801839568.json  main_run_327.json  main_run_list_after_push.json  main_run_list_after_push.txt  main_run_list_after_restore.json  main_run_list_after_restore.txt  main_run_list_after_rustfmt.json  main_run_list_short.json  main_run_list_short.txt  main_run_number_to_db.json  poll_and_download_gh_runs.ps1  pr15_checks.txt  pr15_diff.patch  pr15_failure_analysis.txt  pr15_failure_snippets.txt  pr15_headsha.txt  pr15_merge_status.json  pr15_run_list.json  pr15_run_list.txt  (+41 more)
ci_scripts/: poll_run_17801698782.ps1
config/: genesis.json  node.toml
contrib/: precommit-windows.md
crates/ark-node/: Cargo.toml
crates/ark-node/src/: main.rs
crates/ark-wallet-cli/: Cargo.toml  LICENSE  README.md  TODO.md
crates/ark-wallet-cli/src/: cli.rs  lib.rs  main.rs
crates/ark-wallet-cli/src/security/: codec.rs  errors.rs  fs.rs  kdf.rs  mod.rs
crates/ark-wallet-cli/src/wallet/: address.rs  hd.rs  key_manager.rs  keystore.rs  mod.rs
crates/ark-wallet-cli/tests/: address_b58check.rs  cli_b58check.rs  cli_help.rs  cli_kdf_and_confirm.rs  cli_kdf_params.rs  create_json.rs  encrypt_randomness.rs  export_json.rs  export_out_priv_default.rs  integration_prepare_decrypt.rs  invalid_kdf_params_additional.rs  keystore_errors.rs  keystore_roundtrip.rs  keystore_tamper.rs  mnemonic.rs  non_interactive_password_flow.rs  overwrite.rs  password_confirm.rs  password_io.rs
examples/: envelope_demo.rs
nova-core/: Cargo.toml
patches/: nova-core-cold-sign-adjusted.patch
scripts/: auto_fix_pr_ci.ps1  auto_fix_pr_ci_launcher.ps1  autofix_runner.ps1  ci-remediate.ps1  ci-triage-sim.ps1  ci-triage.ps1  download_and_scan_runs.ps1  download_and_scan_runs.ps1.new  download_and_scan_runs_fixed.ps1  extract_geiger.py  extract_geiger_cli.py  extract_geiger_debug.py  extract_geiger_debug2.py  extract_geiger_to_file.py  find_arglist_usages.ps1  find_empty_arglist.ps1  find_start_process.ps1  geiger_to_csv.py  install_autofix_hook.ps1  install_precommit_windows.ps1  lib_process.ps1  list_arglist_lines.ps1  parse_geiger_manual.py  poll_gh_run.ps1  precommit_ps_autofix.ps1  precommit_pslint.ps1  precommit_rustfmt.ps1  repo_fuzzy_search.ps1  run_parse_geiger.ps1  scan_gh_run_logs.ps1  search_ci_artifacts_safe.ps1  search_more.ps1  start_auto_fix_job.ps1  start_detached_auto_fix.ps1  test_start_process_safe.ps1
tmp/: create_pr_body_and_open_pr.ps1  monitor_v0.4.8.ps1  poll_release.ps1  pr_body.txt  run_geiger_ark_wallet.ps1
tmp_logs/: audit_top3_details.md  auto-fix-ci-mkdir-windows-992162228-body.txt  cargo_audit.json  cargo_audit_output.txt  clippy_all.txt  clippy_output.txt  geiger.txt  geiger_ark_wallet_cli.txt  geiger_top30.csv  geiger_top30_aggregated.csv  geiger_top30_aggregated.md  test_all.txt
(+38 files in other folders)
