[workspace]
members = [
  "crates/ark-types",
  "crates/ark-crypto",
  "crates/ark-storage",
  "crates/ark-p2p",
  "crates/ark-consensus",
  "crates/ark-exec",
  "crates/ark-rpc",
  "crates/ark-node",
  "crates/ark-wallet-cli",
  "nova-core",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","signal","net","io-util"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
bs58 = "0.5"
bip39 = { version = "2", default-features = false, features = ["std", "chinese-simplified"] }
bip32 = { version = "0.5", default-features = false, features = ["secp256k1","alloc","std"] }
getrandom = { version = "0.3", features = ["std"] }
sha2 = "0.10"
toml = "0.8"
aes-gcm = { version = "0.10", features = ["aes"] }
generic-array = "0.14.7"
memchr = "2.7.5"
aes = "0.8.4"
windows-sys = "0.60.2"
pbkdf2 = "0.12"
scrypt = "0.11"
base64 = "0.22"
k256 = { version = "0.13", features = ["ecdsa"] }
zeroize = "1"
chrono = "0.4"
rand = "0.8.5"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"