[package]
name = "ark-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["net","io-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

ark-types = { path = "../ark-types" }
ark-consensus = { path = "../ark-consensus" }
ark-exec = { path = "../ark-exec" }
ark-storage = { path = "../ark-storage" }
ark-p2p = { path = "../ark-p2p" }
ark-rpc = { path = "../ark-rpc" }