[package]
name = "ark-wallet-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Ark wallet CLI: mnemonic, HD derivation, keystore import/export"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your/repo"
readme = "README.md"
keywords = ["wallet", "cli", "blockchain", "crypto"]
categories = ["command-line-utilities", "cryptography"]

[features]
default = ["zh"]
zh = ["bip39/chinese-simplified"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bip39 = { workspace = true, features = ["std"] }
bip32 = { workspace = true }
bs58 = { workspace = true }
getrandom = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
pbkdf2 = { workspace = true }
scrypt = { workspace = true }
base64 = { workspace = true }
k256 = { workspace = true }
zeroize = { workspace = true }
chrono = { workspace = true }
dialoguer = "0.12"
console = "0.15"

[[bin]]
name = "ark-wallet"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }